--- a/api-gateway-proxy-server/nginx.conf
+++ b/api-gateway-proxy-server/nginx.conf
@@ -1,20 +1,19 @@
 events {}
 
 http {
+    resolver 127.0.0.11 ipv6=off;  
+
     server {
         listen 80;
 
-        # Web frontend (React hoặc Nginx static web)
         location / {
-            proxy_pass http://web-frontend:8080;
+            proxy_pass http://web-frontend:80/;
         }
 
-        # Flask backend API
         location /api/ {
             proxy_pass http://application-backend:8085/;
         }
 
-        # Keycloak authentication
         location /auth/ {
             proxy_pass http://authentication-identity:8080/;
         }
