--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -103,7 +103,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./api-gateway-proxy-server/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./api-gateway-proxy-server/nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - web-frontend
       - application-backend
