Update project 5pm

--- a/api-gateway-proxy-server/nginx.conf
+++ b/api-gateway-proxy-server/nginx.conf
@@ -1,21 +1,40 @@
+# Nginx reverse proxy + Load Balancer (Round Robin)
+
 events {}
 
 http {
-    resolver 127.0.0.11 ipv6=off;  
+    resolver 127.0.0.11 ipv6=off;  # Docker internal DNS
+
+    # 🔁 Load Balancer - Round Robin giữa 2 web frontend
+    upstream web_frontend_cluster {
+        server web-frontend:80;
+        server web-frontend-2:80;
+    }
 
     server {
         listen 80;
 
+        # 1️⃣ Route chính - phân phối tới cụm frontend
         location / {
-            proxy_pass http://web-frontend:80/;
+            proxy_pass http://web_frontend_cluster/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
+        # 2️⃣ Backend Flask
         location /api/ {
             proxy_pass http://application-backend:8085/;
         }
 
+        # 3️⃣ Keycloak
         location /auth/ {
             proxy_pass http://authentication-identity:8080/;
+        }
+
+        # 4️⃣ API /student
+        location /student/ {
+            proxy_pass http://application-backend:8085/student;
         }
     }
 }
