--- a/api-gateway-proxy-server/nginx.conf
+++ b/api-gateway-proxy-server/nginx.conf
@@ -25,6 +25,9 @@ http {
         # 2️⃣ Backend Flask
         location /api/ {
             proxy_pass http://application-backend:8085/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
         # 3️⃣ Keycloak
