--- a/application-backend-server/Dockerfile
+++ b/application-backend-server/Dockerfile
@@ -1,5 +1,6 @@
 FROM python:3.11-alpine
 WORKDIR /app
-COPY app.py .
-RUN pip install flask
+COPY . /app
+RUN pip install flask mysql-connector-python
+EXPOSE 8085
 CMD ["python", "app.py"]
