--- a/monitoring-prometheus-server/prometheus.yml
+++ b/monitoring-prometheus-server/prometheus.yml
@@ -4,3 +4,8 @@ scrape_configs:
   - job_name: 'node-exporter'
     static_configs:
       - targets: ['node-exporter:9100']
+
+  - job_name: 'web'
+    metrics_path: /    
+    static_configs:
+      - targets: ['web-frontend:80']
