--- a/api-gateway-proxy-server/nginx.conf
+++ b/api-gateway-proxy-server/nginx.conf
@@ -1,11 +1,9 @@
-# Nginx reverse proxy + Load Balancer (Round Robin)
-
 events {}
 
 http {
     resolver 127.0.0.11 ipv6=off;  # Docker internal DNS
 
-    # 🔁 Load Balancer - Round Robin giữa 2 web frontend
+    # 🔁 Load Balancer - Round Robin giữa 2 web frontend (Bài 10 Mở rộng)
     upstream web_frontend_cluster {
         server web-frontend:80;
         server web-frontend-2:80;
@@ -14,7 +12,7 @@ http {
     server {
         listen 80;
 
-        # 1️⃣ Route chính - phân phối tới cụm frontend
+        # 1️⃣ Route chính - phân phối tới cụm frontend (Load Balancing)
         location / {
             proxy_pass http://web_frontend_cluster/;
             proxy_set_header Host $host;
@@ -24,7 +22,10 @@ http {
 
         # 2️⃣ Backend Flask
         location /api/ {
-            proxy_pass http://application-backend:8085/;
+            # --- SỬA LẠI QUAN TRỌNG ---
+            # Phải dùng cổng 8081 (cổng nội bộ container), KHÔNG dùng 8085
+            proxy_pass http://application-backend:8081/;
+            
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -33,11 +34,20 @@ http {
         # 3️⃣ Keycloak
         location /auth/ {
             proxy_pass http://authentication-identity:8080/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        # 4️⃣ API /student
+        # 4️⃣ API /student (Bài 2 & 9 Mở rộng)
         location /student/ {
-            proxy_pass http://application-backend:8085/student;
+            # --- SỬA LẠI QUAN TRỌNG ---
+            # Phải dùng cổng 8081
+            proxy_pass http://application-backend:8081/student;
+            
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }
 }
