--- a/web-frontend-server/nginx.conf
+++ b/web-frontend-server/nginx.conf
@@ -1,18 +1,37 @@
+web-frontend-server\nginx.conf
+
 events {}
 
+
+
 http {
+
     server {
+
         listen 80;
+
         root /usr/share/nginx/html;
+
         index index.html;
 
+
+
         location / {
+
             try_files $uri $uri/ =404;
+
         }
 
+
+
         location /blog/ {
+
             alias /usr/share/nginx/html/blog/;
+
             autoindex on;
-        }
+
+        }   
+
     }
+
 }
